--- a/nginx.conf
+++ b/nginx.conf
@@ -29,5 +29,5 @@ http {
 	include /etc/nginx/modules.d/*.conf;
 
 	#virtual hosts
-	include /etc/nginx/vhosts.d/*;
+	include /etc/nginx/conf.d/*;
 }
