--- a/conf.d/pastvu.conf
+++ b/conf.d/pastvu.conf
@@ -165,6 +165,11 @@ server {
 		try_files $uri @upload_proxy;
 	}
 
+	location = /api2 {
+		error_page 404 /views/html/status/404.html;
+		try_files $uri @api_proxy;
+	}
+
 	location @proxy {
 		proxy_next_upstream error timeout http_500 http_502 http_503 http_504;
 
@@ -241,5 +246,21 @@ server {
 		proxy_pass http://backend_download_nodejs;
 		error_page 303 = @prOk;
 		error_page 400 403 404 500 502 503 504 = @prFailed;
+	}
+
+	location @api_proxy {
+		proxy_next_upstream error timeout http_500 http_502 http_503 http_504;
+
+		proxy_redirect off;
+		proxy_set_header   X-Real-IP           $http_x_real_ip;
+		proxy_set_header   X-Forwarded-For     $proxy_add_x_forwarded_for;
+		proxy_set_header   X-Forwarded-Proto   $http_x_forwarded_proto;
+		proxy_set_header   Host                $http_host;
+		proxy_set_header   X-NginX-Proxy       true;
+
+		proxy_read_timeout 3m;
+		proxy_send_timeout 3m;
+
+		proxy_pass http://backend_api_nodejs;
 	}
 }
