--- a/modules.d/upstream.conf
+++ b/modules.d/upstream.conf
@@ -2,6 +2,7 @@ upstream backend_nodejs_ru {
         server app_ru:3000 max_fails=0 fail_timeout=30s;
         keepalive 512;
 }
+
 upstream backend_nodejs_en {
         server app_en:3000 max_fails=0 fail_timeout=30s;
         keepalive 512;
@@ -14,5 +15,10 @@ upstream backend_upload_nodejs {
 
 upstream backend_download_nodejs {
         server downloader:3002 max_fails=0 fail_timeout=30s;
+        keepalive 512;
+}
+
+upstream backend_api_nodejs {
+        server api:3000 max_fails=0 fail_timeout=30s;
         keepalive 512;
 }
