--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -14,8 +14,7 @@ server {
 	charset         utf-8;
 	etag            off;
 
-	#access_log   /var/log/nginx/access.log  main;
-	access_log   off;
+	access_log   /var/log/nginx/access.log  main;
 	error_log    /var/log/nginx/error.log;
 
 	include /etc/nginx/mime.types;
