--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -116,6 +116,10 @@ server {
 		try_files $uri  =404;
 	}
 
+	location / {
+		try_files $uri;
+	}
+
 	location ^~ /download/ {
 		error_page 404 /views/html/status/404.html;
 		try_files $uri @download_proxy;
