--- a/conf.d/upstream.conf
+++ b/conf.d/upstream.conf
@@ -1,3 +1,3 @@
 upstream backend_download_nodejs {
-        server downloader:3002 max_fails=0 fail_timeout=30s;
+        server downloader:3002;
 }
