--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,22 +1,28 @@
 name: Docker Image CI
 
 on:
+  push:
+    branches:
+      - '**'
+    tags:
+      - 'v*'
   workflow_dispatch:
-    inputs:
-      tag:
-        required: true
-        default: master
-
 jobs:
-
   build-and-push-app:
     runs-on: ubuntu-latest
     steps:
 
       - uses: actions/checkout@v2
-   
+
+      - name: Backend meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with:
+          images: pastvu/fileserver
+          tag-semver: |
+            {{version}}
+
       - name: Set up Docker Buildx
-        id: buildx
         uses: docker/setup-buildx-action@v1
 
       - name: Login to Docker Hub
@@ -29,10 +35,9 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: .
-          file: ./Dockerfile
           push: true
-          tags: pastvu/fileserver:${{ github.event.inputs.tag }}
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
