--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -1,13 +1,6 @@
-map $http_accept $webp_suffix {
-	default   "";
-	"~*webp"  ".webp";
-}
-map $uri $filepath {
-	"~^\/_pr?\/(.+)$"  $1;
-}
-
 server {
 	listen 80;
+	aio on;
 
 	location ~* ^/sitemap\d*.xml(.gz)?$ {
 		root /sitemap;
@@ -26,20 +19,6 @@ server {
 	# This location will be used for direct protected file request, always serves from backend
 	location ~* ^\/_pr\/([\/a-z0-9]+\.(?:jpe?g|png))$ {
 		try_files $uri @download_proxy;
-	}
-
-	# This location will be used if downloader backend returned ok (303) for /_pr/ request
-	location @prOk {
-		root /store;
-		set $path /protected/photos/$filepath;
-		try_files $path$webp_suffix $path $uri/ @prFailed;
-	}
-
-	# This location will be used if downloader backend didn't returned ok for /_pr/ request, or unavailable
-	# It will rewrite uri to use /_prn/ location
-	location @prFailed {
-		rewrite ^\/_pr?\/(.+)$ /_prn/$1 last;
-		return 404;
 	}
 
 	# This location will be used for direct covered file request of if pubic/protected serving failed
@@ -82,5 +61,19 @@ server {
 		proxy_pass http://backend_download_nodejs;
 		error_page 303 = @prOk;
 		error_page 400 403 404 500 502 503 504 = @prFailed;
+	}
+
+	# This location will be used if downloader backend returned ok (303) for /_pr/ request
+	location @prOk {
+		root /store;
+		set $path /protected/photos/$filepath;
+		try_files $path$webp_suffix $path $uri/ @prFailed;
+	}
+
+	# This location will be used if downloader backend didn't returned ok for /_pr/ request, or unavailable
+	# It will rewrite uri to use /_prn/ location
+	location @prFailed {
+		rewrite ^\/_pr?\/(.+)$ /_prn/$1 last;
+		return 404;
 	}
 }
