--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -29,16 +29,16 @@ server {
 		try_files $path$webp_suffix $path =404;
 	}
 
-	location ^~ /_a/d/ {
-		root /store/public/avatars;
+	location /_a/d/ {
+		alias /store/public/avatars/d/;
 		add_header Vary Accept;
-		try_files $uri$webp_suffix $uri /d/avatar.png =404;
+		try_files $uri$webp_suffix $uri /avatar.png =404;
 	}
 
-	location ^~ /_a/h/ {
-		root /store/public/avatars;
+	location /_a/h/ {
+		alias /store/public/avatars/h/;
 		add_header Vary Accept;
-		try_files $uri$webp_suffix $uri /h/avatarth.png  =404;
+		try_files $uri$webp_suffix $uri /avatarth.png  =404;
 	}
 
 	location ^~ /files/ {
